bug(fix): fix details modal display on mobile (#78)
- the modal does not close on mobile view

[Finishes #160238493]

--- a/src/components/RequestsModal/CommentBox/_CommentBox.scss
+++ b/src/components/RequestsModal/CommentBox/_CommentBox.scss
@@ -88,3 +88,21 @@
     }
   }
 }
+
+@media (max-width: 640px) {
+  #mceu_4 {
+    margin-right: 0;
+  }
+  #mceu_0 {
+    margin-left: 14px !important;
+  }
+}
+
+@media (max-width: 568px) {
+  #mceu_4 {
+    margin-right: -5px;
+  }
+  #mceu_0 {
+    margin-left: 0 !important;
+  }
+}
