--- a/src/components/nav-bar/NavBar.scss
+++ b/src/components/nav-bar/NavBar.scss
@@ -46,16 +46,15 @@
         background-color: #ffffff;
         box-shadow: none;
         border-bottom: 1px solid #e9e9e9;
+        z-index: 0;
 
-        z-index: 2;
         @media (max-width: 1024px) {
             height: 5.5%;
         }
         @media (max-width: 839px) and (min-width: 480px) {
-            width: 99%; // background-color: blue;
+            width: 99%; 
         }
         @media (max-width: 479px) {
-            // width: auto;
             height: auto;
 
             box-shadow: 0px 1px 5px 0px rgba(94,94,94,0.25);
